test05/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: test05
spec:
  selector:
    app: test05
  ports:
    - port: 80
      targetPort: 8000
